fuse: install /dev/fuse

--- a/fuse/Makefile
+++ b/fuse/Makefile
@@ -2,7 +2,9 @@ compile: default-autotools-compile
 
 staging: default-autotools-staging
 
-rootfs-y := /usr/lib/libfuse.so.*
+rootfs-y := \
+	/dev/fuse \
+	/usr/lib/libfuse.so.*
 
 configure-args-y += --with-shared --disable-example
 
