--- a/Kconfig
+++ b/Kconfig
@@ -27,6 +27,7 @@ menu "Tools"
 
 source "dosfstools/Kconfig"
 source "e2fsprogs/Kconfig"
+source "file/Kconfig"
 source "gdb/Kconfig"
 source "kexec-tools/Kconfig"
 source "libpcap/Kconfig"
