rules: cosmetic fixes

--- a/kexec-tools/Makefile
+++ b/kexec-tools/Makefile
@@ -1,11 +1,14 @@
-configure-args-y += --without-zlib --without-lzma --without-xen
+configure-args-y += \
+	--without-zlib \
+	--without-lzma \
+	--without-xen
+
+rootfs-y := /usr/sbin/kexec
+rootfs-$(MKR_KEXEC_TOOLS_KDUMP) += /usr/sbin/kdump
 
 compile: default-autotools-compile
 
 staging: default-autotools-staging
-
-rootfs-y := /usr/sbin/kexec
-rootfs-$(MKR_KEXEC_TOOLS_KDUMP) += /usr/sbin/kdump
 
 rootfs: default-rootfs
 
