--- a/file/Makefile
+++ b/file/Makefile
@@ -1,6 +1,5 @@
-configure-args-y += \
-	ac_cv_lib_z_gzopen=no \
-	--prefix=/usr
+configure-args-$(call not, $(MKR_FILE_ZLIB)) += \
+	ac_cv_lib_z_gzopen=no
 
 rootfs-y += \
 	/usr/share/misc \
