--- a/kexec-tools/Kconfig
+++ b/kexec-tools/Kconfig
@@ -9,6 +9,10 @@ config KEXEC_TOOLS_SRCDIR
        srcdir "Source directory"
        default "kexec-tools-*"
 
+config KEXEC_ZLIB
+       bool "Enable zlib compression"
+       build_select ZLIB
+
 config KEXEC_TOOLS_KDUMP
        bool "Install kdump tool"
 
