--- a/kexec-tools/Makefile
+++ b/kexec-tools/Makefile
@@ -1,7 +1,9 @@
 configure-args-y += \
-	--without-zlib \
 	--without-lzma \
 	--without-xen
+
+configure-args-$(MKR_KEXEC_ZLIB) += --with-zlib
+configure-args-$(call not, $(MKR_KEXEC_ZLIB)) += --without-zlib
 
 rootfs-y := /usr/sbin/kexec
 rootfs-$(MKR_KEXEC_TOOLS_KDUMP) += /usr/sbin/kdump
