--- a/file/Kconfig
+++ b/file/Kconfig
@@ -9,6 +9,10 @@ config FILE_SRCDIR
        srcdir "Source directory"
        default "file-*"
 
+config FILE_ZLIB
+       bool "Enable zlib compression"
+       build_select ZLIB
+
 endif
 
 endmenu
