filesystems: add support for ntfs

--- a/Kconfig
+++ b/Kconfig
@@ -41,6 +41,7 @@ source "gdb/Kconfig"
 source "kexec-tools/Kconfig"
 source "make/Kconfig"
 source "netcat/Kconfig"
+source "ntfs-3g/Kconfig"
 source "strace/Kconfig"
 source "tcpdump/Kconfig"
 source "valgrind/Kconfig"
