--- a/build-tools/Makefile.pkgbuild
+++ b/build-tools/Makefile.pkgbuild
@@ -188,6 +188,28 @@ default-rootfs:
 			exit 1; \
 		fi
 
+strip-base := strip -R .note -R .comment
+strip-bin := $(cross)$(strip-base) -s
+strip-lib := $(cross)$(strip-base) --strip-unneeded
+strip-mod := $(kcross)$(strip-base) --strip-unneeded
+
+.PHONY: strip
+strip:
+	$(Q)cat $(CURDIR)/.mkr.filelist | while read f; do \
+		g="$(rootfs)/$$f"; \
+		case "$$f" in \
+		dev/*|*.o|*.a)continue;; \
+		*)if [ ! -f $$g -o ! $$g -nt .mkr.stripped ]; then \
+			continue; \
+		  fi;; \
+		esac; \
+		case "$$f" in \
+		*.ko) $(strip-mod) $$g > /dev/null 2>&1 || :;; \
+		*.so.*) $(strip-lib) $$g > /dev/null 2>&1 || :;; \
+		*) $(strip-bin) $$g > /dev/null 2>&1 || :;; \
+		esac; \
+	done
+
 .PHONY: default-clean
 default-clean:
 	$(Q)if test -e Makefile; then \
