--- a/build-tools/fakeroot-1.14.4/Makefile
+++ b/build-tools/fakeroot-1.14.4/Makefile
@@ -1,7 +1,7 @@
-config.status: $(O)/.mkr.builddir
+config.status: $(O)/.mkr.builddir $(srctree)/build-tools/fakeroot-1.14.4/fakeroot-filter.c
 	$(srctree)/build-tools/fakeroot-1.14.4/configure \
 		--prefix=$(O)/build-tools \
 		CC="$(HOSTCC)" CFLAGS=-O2
 
-$(O)/build-tools/bin/fakeroot: config.status
+$(O)/build-tools/bin/fakeroot-filter: config.status
 	$(MAKE) install
