--- a/build-tools/fakeroot-1.14.4/config.h.in
+++ b/build-tools/fakeroot-1.14.4/config.h.in
@@ -170,6 +170,10 @@
 /* path to libc shared object */
 #undef LIBCPATH
 
+/* Define to the sub-directory in which libtool stores uninstalled libraries.
+   */
+#undef LT_OBJDIR
+
 /* Name of package */
 #undef PACKAGE
 
