--- a/boards/generic/skel/etc/mdev.conf
+++ b/boards/generic/skel/etc/mdev.conf
@@ -1,2 +1,4 @@
-@MKR_MOUNT_DEV@ 0:0 0666 @/sbin/mount_storage.sh
-@MKR_MOUNT_DEV@ 0:0 0666 $/sbin/mount_storage.sh
+sd[a-z][0-9]+ 0:0 0666 @/sbin/mount_storage.sh
+sd[a-z][0-9]+ 0:0 0666 $/sbin/mount_storage.sh
+mmcblk[0-9]+p* 0:0 0666 @/sbin/mount_storage.sh
+mmcblk[0-9]+p* 0:0 0666 $/sbin/mount_storage.sh
