--- a/Kconfig
+++ b/Kconfig
@@ -42,6 +42,7 @@ source "kexec-tools/Kconfig"
 source "make/Kconfig"
 source "netcat/Kconfig"
 source "ntfs-3g/Kconfig"
+source "rtnet/Kconfig"
 source "strace/Kconfig"
 source "tcpdump/Kconfig"
 source "valgrind/Kconfig"
