rootfs: fix reduced rootfs generation
by removing generic directories from packages rootfs-y with
default-rootfs rule, as this causes all files in that directory
to be copied from staging to rootfs, including those from other
packages.

--- a/build-tools/Makefile.pkgbuild
+++ b/build-tools/Makefile.pkgbuild
@@ -152,7 +152,7 @@ default-autotools-staging:
 .PHONY: rootfs
 rootfs:
 
-RSOPTS=-lptgodDRru
+RSOPTS=-lptgodDRu
 
 .PHONY: default-copyall-rootfs
 default-copyall-rootfs:
