--- a/e2fsprogs/Makefile
+++ b/e2fsprogs/Makefile
@@ -6,11 +6,38 @@ configure-args-y += \
 	--disable-nls
 
 rootfs-y += \
-	/etc \
-	/sbin \
-	/usr/bin \
-	/usr/sbin \
-	/usr/lib
+	/usr/bin/chattr \
+	/usr/bin/lsattr \
+	/usr/bin/uuidgen \
+	/usr/etc/mke2fs.conf \
+	/usr/lib/e2initrd_helper \
+	/usr/sbin/badblocks \
+	/usr/sbin/blkid \
+	/usr/sbin/debugfs \
+	/usr/sbin/dumpe2fs \
+	/usr/sbin/e2freefrag \
+	/usr/sbin/e2fsck \
+	/usr/sbin/e2image \
+	/usr/sbin/e2label \
+	/usr/sbin/e2undo \
+	/usr/sbin/e4defrag \
+	/usr/sbin/filefrag \
+	/usr/sbin/findfs \
+	/usr/sbin/fsck \
+	/usr/sbin/fsck.ext2 \
+	/usr/sbin/fsck.ext3 \
+	/usr/sbin/fsck.ext4 \
+	/usr/sbin/fsck.ext4dev \
+	/usr/sbin/logsave \
+	/usr/sbin/mke2fs \
+	/usr/sbin/mkfs.ext2 \
+	/usr/sbin/mkfs.ext3 \
+	/usr/sbin/mkfs.ext4 \
+	/usr/sbin/mkfs.ext4dev \
+	/usr/sbin/mklost+found \
+	/usr/sbin/resize2fs \
+	/usr/sbin/tune2fs \
+	/usr/sbin/uuidd
 
 compile: default-autotools-compile
 
