--- a/file/Makefile
+++ b/file/Makefile
@@ -2,9 +2,9 @@ configure-args-$(call not, $(MKR_FILE_ZLIB)) += \
 	ac_cv_lib_z_gzopen=no
 
 rootfs-y += \
-	/usr/share/misc \
-	/usr/lib \
-	/usr/bin
+	/usr/share/misc/magic.mgc \
+	/usr/lib/libmagic.so.* \
+	/usr/bin/file
 
 compile: default-autotools-compile
 
