fix cross-compilation issues

--- a/gdb/Makefile
+++ b/gdb/Makefile
@@ -1,6 +1,9 @@
 configure-args-y += \
 	--without-expat \
-	--with-curses
+	--with-curses \
+	--disable-nls \
+	--disable-sim \
+	--disable-gdbserver
 
 configure-args-$(MKR_GDB_ZLIB) += --with-zlib
 configure-args-$(call not, $(MKR_GDB_ZLIB)) += --without-zlib
