ncurses: install terminfos

--- a/ncurses/Makefile
+++ b/ncurses/Makefile
@@ -3,6 +3,7 @@ configure-args-y += \
 	--without-manpages
 
 rootfs-y := \
+	/usr/share/terminfo/*/* \
 	/usr/lib/libncurses.so.*
 
 compile: default-autotools-compile
