libpcap: requires CONFIG_PACKET in kernel configuration

--- a/libpcap/Makefile
+++ b/libpcap/Makefile
@@ -1,3 +1,7 @@
+confcheck-y += $(call confcheck-if, \
+	test "$(CONFIG_PACKET)" != "y", \
+	libpcap requires CONFIG_PACKET in kernel configuration.)
+
 configure-args-y += \
 	--with-pcap=linux
 
@@ -10,3 +14,5 @@ staging: default-autotools-staging
 rootfs: default-rootfs
 
 clean: default-clean
+
+confcheck: default-confcheck
