zlib: pass compilation/link flags
This fixes the x86_32 build

--- a/zlib/Makefile
+++ b/zlib/Makefile
@@ -2,7 +2,9 @@ configure-args-y :=
 
 configure-env-y := \
 	prefix=/usr \
-	CC="$(CC)"
+	CC="$(CC)" \
+	CFLAGS="$(cflags-y)" \
+	LDFLAGS="$(ldflags-y)"
 
 rootfs-y := \
 	/usr/lib/libz.so.*
